<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background2"
        tools:context=".presentation.activity.FormUserActivity">

        <TextView
            android:id="@+id/userDetailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#001C19"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:fontFamily="@font/montserrat_bold"
            android:text="@string/usuario" />

        <TextView
            android:id="@+id/nameFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/id"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDetailUser" />

        <TextView
            android:id="@+id/nameDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/id_de_usuario"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/nameFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDetailUser" />

        <TextView
            android:id="@+id/cpfFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/cpf"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameDetailUser" />

        <TextView
            android:id="@+id/cpfDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/cpf_do_usuario"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/cpfFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameDetailUser" />

        <TextView
            android:id="@+id/addressDetailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#001C19"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpfDetailUser"
            tools:fontFamily="@font/montserrat_bold"
            android:text="@string/endere_o" />

        <TextView
            android:id="@+id/cepFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/cep2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressDetailUser" />

        <TextView
            android:id="@+id/cepDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/cep"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/cepFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressDetailUser" />

        <TextView
            android:id="@+id/ufFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/estado"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cepDetailUser" />

        <TextView
            android:id="@+id/ufDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/estado_uf"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ufFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cepDetailUser" />

        <TextView
            android:id="@+id/cityFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/cidade2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ufDetailUser" />

        <TextView
            android:id="@+id/cityDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/cidade"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/cityFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ufDetailUser" />

        <TextView
            android:id="@+id/neighborhoodFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/bairro2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityDetailUser" />

        <TextView
            android:id="@+id/neighborhoodDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/bairro"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/neighborhoodFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityDetailUser" />

        <TextView
            android:id="@+id/streetFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/rua2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neighborhoodDetailUser" />


        <TextView
            android:id="@+id/streetDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/rua"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/streetFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neighborhoodDetailUser" />

        <TextView
            android:id="@+id/numberFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/n_mero2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streetDetailUser" />

        <TextView
            android:id="@+id/numberDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/n_mero"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/numberFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streetDetailUser" />

        <TextView
            android:id="@+id/complementFixedDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:text="@string/complemento2"
            android:textColor="#1D3731"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberDetailUser" />

        <TextView
            android:id="@+id/complementDetailUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#1D3731"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/complemento"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/complementFixedDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberDetailUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>